--- a/no-framework/HW-2_index.html
+++ b/no-framework/HW-2_index.html
@@ -16,9 +16,7 @@
         }
         .nav{
             position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
+            width: 100%;
             margin-bottom: 0;
             background-color: rgb(39, 156, 64);
             display: flex;
@@ -27,28 +25,38 @@
             overflow: none;
         }
         h2{
-            width: 100%;
-            padding: 13px 10px;
+            padding: 5px 10px;
             margin: 0;
             font-size: large;
-            
+            min-width: 100%;
+        }
+        .dropdown{
+            padding-right: 45px;
         }
         .drop-list{
             display: none;
         }
         .drop-list > a{
             padding: 3px 10px; /* padding: top/bottom left/right */
+            color: rgb(0, 111, 111);
+            text-decoration: none;
+        }
+        .drop-list > a:hover{
+            background-color:rgb(39, 255, 64);
+        }
+        .drop-list > a:active{
+            color: red;
         }
         .dropdown:hover .drop-list{
             display: flex;
             flex-direction: column;
             position: absolute;
-            background-color: lightblue;
+            background-color: rgb(39, 196, 64);
             width: 100%;
         }
         .dropdown:hover{
             position: relative;
-            background-color: lightblue;
+            background-color: rgb(39, 196, 64);
         }
         .container{
             display: flex;
@@ -65,9 +73,14 @@
             margin-top: 20px;
         }
         .card > p{
-            margin-top: 0;
             margin-left: 10px;
+            margin-bottom: 20px;
+            margin-right: 10px;
         }
+        .card > h2{
+            margin-top: 15px;
+        }
+        
         .card-1{
             border-left: solid;
             border-color: green;
