--- a/no-framework/HW-2_index.html
+++ b/no-framework/HW-2_index.html
@@ -9,6 +9,10 @@
 <body>
     <!--Style block-->
     <style>
+        /*box-sizing should always be done in the beginning of the css file vv*/
+        *{
+            box-sizing: border-box;
+        }
         body{
             background-color: rgb(220, 250, 230);
             font-family: Arial, Helvetica, sans-serif;
