--- a/no-framework/HW-1_index.html
+++ b/no-framework/HW-1_index.html
@@ -327,5 +327,9 @@
             </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script>
+      
+    </script>
 </body>
 </html>
