almost complete header for homepage

--- a/no-framework/projHome.html
+++ b/no-framework/projHome.html
@@ -36,7 +36,7 @@
           color: rgb(92, 210, 249);
         }
         .navbar.is-transparent .navbar-dropdown a.navbar-item:hover{
-          color: rgb(0, 132, 255);
+          color: rgb(72, 95, 199);
         }
         .navbar-item > h2{
           font-size: xx-large;
@@ -51,9 +51,21 @@
           top: 0;
           right: 0;
           left: 0;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
         }
-        
-        
+        .pic-container > h1{
+          color: white;
+          font-size: 3rem;
+        }
+        .pic-container strong{
+          color:rgb(92, 210, 249);
+        }
+        .is-primary{
+          background-color: rgb(92, 210, 249) !important;
+        }
     </style>
 
 
@@ -119,7 +131,7 @@
   </nav>
   
   <div class="pic-container">
-    <h1>Welcome to your fitness journy</h1>
+    <h1><strong>GIT</strong> started with your <strong>FIT</strong>ness journey</h1>
   </div>
 </body>
 </html>
