switched sign in to log in

--- a/no-framework/LogIn.html
+++ b/no-framework/LogIn.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css">
-    <title>Sign In</title>
+    <title>Log in</title>
 </head>
 <body>
     <style>
@@ -30,7 +30,10 @@
             margin: 0;
         }
         .is-success{
-            background-color: rgb(72, 95, 199) !important;
+            background-color: rgb(30, 133, 30) !important;
+        }
+        .is-success:hover{
+            background-color: rgb(87, 203, 16) !important;
         }
     </style>
     <div class="container">
