--- a/no-framework/Home.html
+++ b/no-framework/Home.html
@@ -228,7 +228,7 @@
         <div class="card">
           <div class="card-content">
             <p class="title">
-              “There are two hard things in computer science: cache invalidation, naming things, and off-by-one errors.”
+              “Deez Nuts”
             </p>
             <p class="subtitle">
               Jeff Atwood
