--- a/no-framework/Home.html
+++ b/no-framework/Home.html
@@ -16,6 +16,8 @@
         body{
             margin: 0;
         }
+
+        /* navbar styling */
         .is-transparent, .navbar-dropdown{
           background-color: rgba(168, 168, 168, 0.5)
         }
@@ -38,6 +40,8 @@
         .button.is-light{
           margin-right: 10px;
         }
+
+        /* seperate container for the picture so it can float behind the navbar */
         .pic-container{
           background-image: url("https://media.istockphoto.com/id/618982838/photo/lace-up-for-the-workout-of-your-life.jpg?s=1024x1024&w=is&k=20&c=QAcgDSeoZERrIBhnJ81PbHe0dlB8NyyahDfCrWsWKcY=");
           height: 500px;
@@ -53,6 +57,8 @@
           align-items: center;
           text-align: center;
         }
+
+        /* text on top of picture*/
         .pic-container > h1{
           color: white;
           font-size: 3rem;
@@ -72,12 +78,16 @@
         .is-primary:hover{
           background-color: rgb(78, 182, 216) !important;
         }
+
+        /* container for all elements and components under the picture */
         .container{
           position: relative;
           top: 500px;
           max-width: 100%;
           margin: 0;
         }
+
+        /* the following media quearies are so that the container stays the width of the view port at all times */
         @media screen and (min-width: 1024px){
           .container { 
               max-width: 100%;
@@ -98,6 +108,8 @@
               max-width: 100%;
           }
         } 
+
+        /* so that there is a margin between the right and left edge of the page in between the picture and the footer */
         .columns{
           margin-right: 2%;
           margin-left: 2%;
@@ -108,10 +120,13 @@
 
 <nav class="navbar is-transparent" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
+
+      <!-- Home link -->
       <a class="navbar-item" href="#">
         <h2>Git Fit</h2>
       </a>
   
+      <!-- mobile burger -->
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
@@ -128,7 +143,8 @@
         <a class="navbar-item">
           Documentation
         </a>
-  
+        
+        <!-- navbar dropdown menu link -->
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
             More
@@ -176,6 +192,8 @@
   <!--container for the rest of the webpage after the picture-->
   <div class="container">
     <div class="columns">
+
+      <!-- first column -->
       <div class="column">
         <div class="card">
           <div class="card-content">
@@ -200,6 +218,8 @@
           </footer>
         </div>
       </div>
+
+      <!-- second column -->
       <div class="column">
         <div class="card">
           <div class="card-content">
@@ -224,6 +244,8 @@
           </footer>
         </div>
       </div>
+
+      <!-- third column -->
       <div class="column">
         <div class="card">
           <div class="card-content">
@@ -250,6 +272,7 @@
       </div>
     </div>
 
+    <!-- a footer for the bottom of the webpage -->
       <footer class="footer">
         <div class="content has-text-centered">
           <p>
