--- a/no-framework/LogIn.html
+++ b/no-framework/LogIn.html
@@ -26,7 +26,7 @@
             text-shadow: 4px 4px 7px gray;
         }
         .box{
-            width: 40%;
+            width: 50%;
             margin: 0;
         }
         .is-success{
@@ -35,6 +35,21 @@
         .is-success:hover{
             background-color: rgb(87, 203, 16) !important;
         }
+        @media screen and (max-width: 1024px){
+          .box { 
+              min-width: 450px;
+          }
+        }
+        @media screen and (max-width: 512px){
+          .box { 
+              min-width: 90%;
+          }
+          h1.has-text-primary{
+            font-size: 6em;
+          }
+        }
+        
+        
     </style>
     <div class="container">
         <h1 class="has-text-primary">GIT FIT</h1>
