updated login.html and index.html
final template for login and index.html

--- a/no-framework/index.html
+++ b/no-framework/index.html
@@ -37,8 +37,14 @@
           font-size: xx-large;
           font-weight: bolder;
         }
-        .button.is-light{
+        .button.is-success{
           margin-right: 10px;
+        }
+        .is-success{
+          background-color: rgb(30, 133, 30) !important;
+        }
+        .is-success:hover{
+            background-color: rgb(87, 203, 16) !important;
         }
 
         /* seperate container for the picture so it can float behind the navbar */
@@ -171,7 +177,7 @@
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
-            <a class="button is-light">
+            <a class="button is-success">
               Log in
             </a>
           </div>
