--- a/no-framework/LogIn.html
+++ b/no-framework/LogIn.html
@@ -10,12 +10,35 @@
 </head>
 <body>
     <style>
+        html, body{
+            height: 100%;
+        }
+        *{
+            box-sizing: border-box;
+        }
+        body{
+            margin: 0;
+            background-color: black;
+        }
+        .bg-img{
+            background-image: url("https://images.pexels.com/photos/10360933/pexels-photo-10360933.jpeg");
+            height: 100%;
+            background-size: cover;
+            background-repeat: no-repeat;
+            filter: blur(3px);
+                -webkit-filter: blur(3px);
+        }
         .container{
             justify-content: center;
             align-items: center;
             display: flex;
             height: 100vh;
+            width: 100%;
             flex-direction: column;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
         .has-text-primary{
             color: rgb(92, 210, 249) !important;
@@ -23,7 +46,7 @@
         h1.has-text-primary{
             font-size: 7em;
             font-weight: bolder;
-            text-shadow: 4px 4px 7px gray;
+            /*text-shadow: 4px 4px 7px rgb(110, 110, 110);*/
         }
         .box{
             width: 50%;
@@ -48,9 +71,10 @@
             font-size: 6em;
           }
         }
-        
-        
     </style>
+
+    <div class="bg-img"></div>
+
     <div class="container">
         <h1 class="has-text-primary">GIT FIT</h1>
         <div class="box">
