--- a/no-framework/index.html
+++ b/no-framework/index.html
@@ -13,6 +13,9 @@
         *{
             box-sizing: border-box;
         }
+        html, body{
+          height: 100%;
+        }
         body{
             margin: 0;
         }
