started working on home page

--- a/no-framework/LogIn.html
+++ b/no-framework/LogIn.html
@@ -73,6 +73,7 @@
         }
     </style>
 
+    <!-- div for backgound image of the entire vp -->
     <div class="bg-img"></div>
 
     <div class="container">
@@ -106,5 +107,6 @@
             </div>
         </div>
     </div>
+    
 </body>
 </html>
